@@ -1,5 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>3</version>
+    <version>4</version>
 </metadata>
-
