@@ -7,6 +7,7 @@
     <value key="jscompilation">++resource++collective.sentry/js/raven.js</value>
     <value key="compile">False</value>
     <value key="depends">plone</value>
+    <value key="merge_with">default</value>
   </records>
 
   <records prefix="plone.bundles/collective-sentry"
@@ -15,6 +16,7 @@
     <value key="jscompilation">sentry-config.js</value>
     <value key="compile">False</value>
     <value key="depends">collective-sentry-ravenjs</value>
+    <value key="merge_with">default</value>
   </records>
 
 </registry>
